2022-01-30  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-term.c (pk_term_init): Do not error when TERM is not
	set.

2022-01-29  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-term.c (pager_inhibited_p): New variable.
	(pk_term_start_pager): Reset pager_inhibited_p.
	(pk_puts_paged): Handle `q' in pager.
	(pk_puts_paged): Style --More--.
	* etc/poke-dark.css (.pager-more): New class.
	* etc/poke-bright.css (.pager-more): Likewise.

2022-01-29  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-settings.pk: Add setting for `pager'.
	* poke/poke.h: Remove poke_pager_p.
	* poke/poke.c: Likewise.
	* poke/pk-cmd-set.c (pk_cmd_set_pager): Delete.
	(pk_cmd_set_init): Remove pager setting.

2022-01-29  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac (HAVE_HSERVER): Search for `tgetnum' first in
	libtermcap and then in libncurses.

2022-01-29  Jose E. Marchesi  <jemarch@gnu.org>

	* bootstrap.conf (gnulib_modules): Add `termios'.

2022-01-29  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-set.c (pk_cmd_set_pager): New function.
	(set_pager_cmd): New variable.
	(pk_cmd_set_init): Add set_pager command.
	* poke/pk-repl.c (pk_repl): Use pager (conditionally) when
	executing commands in the repl.
	* poke/pk-settings.pk: Setting for `pager'.
	* poke/pk-term.c (screen_lines): New variable.
	(screen_cols): Likewise.
	(pager_active_p): Likewise.
	(nlines): Likewise.
	(pk_term_init): Initialize terminal dimensions.
	(pk_term_start_pager): New function.
	(pk_term_stop_pager): Likewise.
	(pk_puts_paged): Likewise.
	(pk_puts): Call pk_puts_paged when necessary.
	(pk_printf): Output via pk_puts.
	* poke/poke.c: New global poke_pager_p.

2022-01-29  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (parse_args_2): Really restore proper behavior with
	-l and unhandled exceptions.

2022-01-29  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (parse_args_2): Restore proper behavior with -l and
	unhandled exceptions.

2022-01-29  Jose E. Marchesi  <jemarch@gnu.org>
