@@ -49,6 +49,8 @@ gnulib_modules="
   stdbool
   strchrnul
   streq
+  termcap
+  termcap-h
   termios
   tmpdir
   unlink
