@@ -1,66 +1,101 @@
-<!DOCTYPE html public "-//w3c//dtd html 4.0 transitional//en">
-<html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <link rel="stylesheet" href="http://jemarch.net/homepage-new.css"/>
-    <link rel="shortcut icon" href="http://jemarch.net/images/poke.ico"/>
-    <title>GNU poke Manual</title>
-  </head>
-  <body>
-    <div class="content">
-    <pre>
+<!--#include virtual="/server/header.html" -->
+<!-- Parent-Version: 1.78 -->
 
-<!--<span class="pre noprint docinfo top"><h1>GNU poke</h1></span>-->
+<!--
+Copyright (C) 2006-2022 Free Software Foundation, Inc.
 
-     _____
- ---'   __\_______
-            ______)         <span class="h1"><h1><a href="../poke.html">GNU poke</a> Manual</h1></span>
-            __)             <h2>For version 2.0</h2>
-           __)
- ---._______)
+Copying and distribution of this file, with or without modification,
+are permitted in any medium without royalty provided the copyright
+notice and this notice are preserved.  This file is offered as-is,
+without any warranty.
+-->
 
+<title>%%TITLE%% - GNU Project - Free Software Foundation</title>
+<!--#include virtual="/server/banner.html" -->
+<h2>%%TITLE%%</h2>
 
-This manual is available in the following formats:
+<address>Free Software Foundation</address>
+<address>last updated %%DATE%%</address>
 
-- <a href="%%PACKAGE%%.html">HTML</a> (%%HTML_MONO_SIZE%%K bytes) entirely on one web page.
+<p>This manual (%%PACKAGE%%) is available in the following formats:</p>
 
-- <a href="html_node/index.html">HTML</a> with one web page per node.
-
+<ul>
+<li><a href="%%PACKAGE%%.html">HTML
+    (%%HTML_MONO_SIZE%%K bytes)</a> - entirely on one web page.</li>
+<li><a href="html_node/index.html">HTML</a> - with one web page per
+    node.</li>
 %%IF HTML_SECTION%%
-- <a href="html_section/index.html">HTML</a> with one web page per section.
-
+<li><a href="html_section/index.html">HTML</a> - with one web page per
+    section.</li>
 %%ENDIF HTML_SECTION%%
 %%IF HTML_CHAPTER%%
-- <a href="html_chapter/index.html">HTML</a>  with one web page per chapter.
+<li><a href="html_chapter/index.html">HTML</a> - with one web page per
+    chapter.</li>
 %%ENDIF HTML_CHAPTER%%
-- <a href="%%PACKAGE%%.html.gz">HTML compressed</a> (%%HTML_MONO_GZ_SIZE%%K gzipped characters)entirely on one web page.
-
-- <a href="%%PACKAGE%%.html_node.tar.gz">HTML compressed</a> (%%HTML_NODE_TGZ_SIZE%%K gzipped tar file) with one web page per node.
-
+<li><a href="%%PACKAGE%%.html.gz">HTML compressed
+    (%%HTML_MONO_GZ_SIZE%%K gzipped characters)</a> - entirely on
+    one web page.</li>
+<li><a href="%%PACKAGE%%.html_node.tar.gz">HTML compressed
+    (%%HTML_NODE_TGZ_SIZE%%K gzipped tar file)</a> -
+    with one web page per node.</li>
 %%IF HTML_SECTION%%
-- <a href="%%PACKAGE%%.html_section.tar.gz">HTML compressed</a> (%%HTML_SECTION_TGZ_SIZE%%K gzipped tar file) with one web page per section.
-
+<li><a href="%%PACKAGE%%.html_section.tar.gz">HTML compressed
+    (%%HTML_SECTION_TGZ_SIZE%%K gzipped tar file)</a> -
+    with one web page per section.</li>
 %%ENDIF HTML_SECTION%%
 %%IF HTML_CHAPTER%%
-- <a href="%%PACKAGE%%.html_chapter.tar.gz">HTML compressed
-  (%%HTML_CHAPTER_TGZ_SIZE%%K gzipped tar file)</a> with one web page
-  per chapter.
-
+<li><a href="%%PACKAGE%%.html_chapter.tar.gz">HTML compressed
+    (%%HTML_CHAPTER_TGZ_SIZE%%K gzipped tar file)</a> -
+    with one web page per chapter.</li>
 %%ENDIF HTML_CHAPTER%%
-- <a href="%%PACKAGE%%.info.tar.gz">Info document</a> (%%INFO_TGZ_SIZE%%K bytes gzipped tar file).
+<li><a href="%%PACKAGE%%.info.tar.gz">Info document
+    (%%INFO_TGZ_SIZE%%K bytes gzipped tar file)</a>.</li>
+<li><a href="%%PACKAGE%%.txt">ASCII text
+    (%%ASCII_SIZE%%K bytes)</a>.</li>
+<li><a href="%%PACKAGE%%.txt.gz">ASCII text compressed
+    (%%ASCII_GZ_SIZE%%K bytes gzipped)</a>.</li>
+<li><a href="%%PACKAGE%%.dvi.gz">TeX dvi file
+    (%%DVI_GZ_SIZE%%K bytes gzipped)</a>.</li>
+<li><a href="%%PACKAGE%%.pdf">PDF file
+    (%%PDF_SIZE%%K bytes)</a>.</li>
+<li><a href="%%PACKAGE%%.texi.tar.gz">Texinfo source
+    (%%TEXI_TGZ_SIZE%%K bytes gzipped tar file).</a></li>
+</ul>
 
-- <a href="%%PACKAGE%%.txt">ASCII text</a> (%%ASCII_SIZE%%K bytes).
+<p>You can <a href="https://shop.fsf.org/">buy printed copies of
+some manuals</a> (among other items) from the Free Software Foundation;
+this helps support FSF activities.</p>
 
-- <a href="%%PACKAGE%%.txt.gz">ASCII text compressed</a> (%%ASCII_GZ_SIZE%%K bytes gzipped).
+<p>(This page generated by the <a href="%%SCRIPTURL%%">%%SCRIPTNAME%%
+script</a>.)</p>
 
-- <a href="%%PACKAGE%%.dvi.gz">TeX dvi file</a> (%%DVI_GZ_SIZE%%K bytes gzipped).
+<!-- If needed, change the copyright block at the bottom. In general,
+     all pages on the GNU web server should have the section about
+     verbatim copying.  Please do NOT remove this without talking
+     with the webmasters first.
+     Please make sure the copyright date is consistent with the document
+     and that it is like this: "2001, 2002", not this: "2001-2002". -->
+</div><!-- for id="content", starts in the include above -->
+<!--#include virtual="/server/footer.html" -->
+<div id="footer">
+<div class="unprintable">
 
-- <a href="%%PACKAGE%%.pdf">PDF file</a> (%%PDF_SIZE%%K bytes).
+<p>Please send general FSF &amp; GNU inquiries to
+<a href="mailto:gnu@gnu.org">&lt;gnu@gnu.org&gt;</a>.
+There are also <a href="/contact/">other ways to contact</a>
+the FSF.  Broken links and other corrections or suggestions can be sent
+to <a href="mailto:%%EMAIL%%">&lt;%%EMAIL%%&gt;</a>.</p>
+</div>
 
-- <a href="%%PACKAGE%%.texi.tar.gz">Texinfo source</a> (%%TEXI_TGZ_SIZE%%K bytes gzipped tar file).
+<p>Copyright &copy; 2022 Free Software Foundation, Inc.</p>
 
-(This page generated by the <a href="%%SCRIPTURL%%">%%SCRIPTNAME%% script</a>.)
-    </pre>
-    </div>
-  </body>
+<p>This page is licensed under a <a rel="license"
+href="https://creativecommons.org/licenses/by-nd/3.0/us/">Creative
+Commons Attribution-NoDerivs 3.0 United States License</a>.</p>
+
+<!--#include virtual="/server/bottom-notes.html" -->
+
+</div>
+</div>
+</body>
 </html>
